--- a/EngineSigma.csproj
+++ b/EngineSigma.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
       <PackageReference Include="OpenTK" Version="4.7.2" />
+      <PackageReference Include="SixLabors.ImageSharp" Version="2.1.2" />
     </ItemGroup>
 
     <ItemGroup>
