--- a/EngineSigma.csproj
+++ b/EngineSigma.csproj
@@ -14,13 +14,28 @@
 
     <ItemGroup>
       <None Remove="Engine\Rendering\shaders\shader.frag" />
-      <Content Include="Engine\Rendering\shaders\shader.frag">
-        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      </Content>
       <None Remove="Engine\Rendering\shaders\shader.vert" />
-      <Content Include="Engine\Rendering\shaders\shader.vert">
-        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Content Include="Engine\Rendering\Shaders\shader.frag">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </Content>
+      <Content Include="Engine\Rendering\Shaders\shader.vert">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
+      <None Remove="Resources\Sprites\grass.png" />
+      <Content Include="Resources\Sprites\grass.png">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
+      <None Remove="Resources\Sprites\stone.png" />
+      <Content Include="Resources\Sprites\stone.png">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Resources\Sprites" />
     </ItemGroup>
 
 </Project>
