Added Input Handling

--- a/EngineSigma.csproj
+++ b/EngineSigma.csproj
@@ -18,13 +18,13 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Content Include="Engine\Rendering\Shaders\shader.frag">
-        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      </Content>
-      <Content Include="Engine\Rendering\Shaders\shader.vert">
-        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      </Content>
       <None Remove="Resources\Sprites\grass.png" />
+      <Content Include="GFX\Shaders\shader.frag">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
+      <Content Include="GFX\Shaders\shader.vert">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
       <Content Include="Resources\Sprites\grass.png">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </Content>
