Refactored Engine Architecture

--- a/Game/Game.csproj
+++ b/Game/Game.csproj
@@ -8,7 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Engine\Engine.csproj" />
+      <ProjectReference Include="..\EngineSigma.Core\EngineSigma.Core.csproj" />
     </ItemGroup>
 
 </Project>
