--- a/EngineSigma/EngineSigma.csproj
+++ b/EngineSigma/EngineSigma.csproj
@@ -23,6 +23,9 @@
       <None Update="Resources\Shaders\fragment.glsl">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="Resources\Sprites\wall.jpg">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
