--- a/EngineSigma.Core/EngineSigma.Core.csproj
+++ b/EngineSigma.Core/EngineSigma.Core.csproj
@@ -8,7 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="OpenTK" Version="4.7.2" />
-      <PackageReference Include="SixLabors.ImageSharp" Version="2.1.2" />
+      <PackageReference Include="System.Drawing.Common" Version="5.0.3" />
     </ItemGroup>
 
 </Project>
