--- a/EngineSigma.Core/EngineSigma.Core.csproj
+++ b/EngineSigma.Core/EngineSigma.Core.csproj
@@ -6,9 +6,21 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+      <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
+    </PropertyGroup>
+
+    <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+      <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
+    </PropertyGroup>
+
     <ItemGroup>
       <PackageReference Include="OpenTK" Version="4.7.2" />
       <PackageReference Include="System.Drawing.Common" Version="5.0.3" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Remove="EngineSigma.Core.csproj.DotSettings" />
     </ItemGroup>
 
 </Project>
