Bugfixes and improved design

--- a/EngineSigma.Editor/EngineSigma.Editor.csproj
+++ b/EngineSigma.Editor/EngineSigma.Editor.csproj
@@ -20,6 +20,10 @@
       <Content Include="Fonts\Ubuntu-Medium.ttf">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </Content>
+      <None Remove="Fonts\Ubuntu-Bold.ttf" />
+      <Content Include="Fonts\Ubuntu-Bold.ttf">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
     </ItemGroup>
 
     <ItemGroup>
