Updated .gitignore for Unit Tests

--- a/EngineSigma.Core.UnitTests/EngineSigma.Core.UnitTests.csproj
+++ b/EngineSigma.Core.UnitTests/EngineSigma.Core.UnitTests.csproj
@@ -6,6 +6,8 @@
         <Nullable>enable</Nullable>
 
         <IsPackable>false</IsPackable>
+
+        <RootNamespace>EngineTests</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
