--- a/EngineSigma.Core/EngineSigma.Core.csproj
+++ b/EngineSigma.Core/EngineSigma.Core.csproj
@@ -15,9 +15,21 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="OpenTK" Version="4.7.2" />
-      <PackageReference Include="SixLabors.ImageSharp" Version="2.1.3" />
-      <PackageReference Include="System.Drawing.Common" Version="5.0.3" />
+      <PackageReference Include="Microsoft.Win32.SystemEvents" Version="7.0.0" />
+      <PackageReference Include="OpenTK" Version="4.7.7" />
+      <PackageReference Include="OpenTK.Compute" Version="4.7.7" />
+      <PackageReference Include="OpenTK.Core" Version="4.7.7" />
+      <PackageReference Include="OpenTK.Graphics" Version="4.7.7" />
+      <PackageReference Include="OpenTK.Input" Version="4.7.7" />
+      <PackageReference Include="OpenTK.Mathematics" Version="4.7.7" />
+      <PackageReference Include="OpenTK.OpenAL" Version="4.7.7" />
+      <PackageReference Include="OpenTK.redist.glfw" Version="3.3.8.30" />
+      <PackageReference Include="OpenTK.Windowing.Common" Version="4.7.7" />
+      <PackageReference Include="OpenTK.Windowing.Desktop" Version="4.7.7" />
+      <PackageReference Include="OpenTK.Windowing.GraphicsLibraryFramework" Version="4.7.7" />
+      <PackageReference Include="SixLabors.ImageSharp" Version="3.0.1" />
+      <PackageReference Include="System.Drawing.Common" Version="7.0.0" />
+      <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="6.0.0" />
     </ItemGroup>
 
     <ItemGroup>
