Renamed Project to EngiN95

--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,4 @@
-
 .idea/
-
-Engine/obj/
-
-Game/obj/
-
-Game/bin/
-
-EngineSigma.Core/bin/
-
-EngineSigma.Core/obj/
-
-EngineSigma/obj/
-
-EngineSigma/bin/
-
-EngineTests/bin/
-
-EngineTests/obj/
-
-obj/
-
-Frontend/bin/
-
-EngineSigma.Editor/bin/
-
 .vs/
-
-EngineSigma.Core.UnitTests/bin/
+bin/
+obj/
