--- a/EngiN95/EngiN95.csproj
+++ b/EngiN95/EngiN95.csproj
@@ -36,6 +36,10 @@
       <Content Include="Resources\Sprites\wall.jpg">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </Content>
+      <None Remove="Resources\Sprites\travisfish.png" />
+      <Content Include="Resources\Sprites\travisfish.png">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Content>
     </ItemGroup>
 
 </Project>
